tests/baselines/reference/overridingPrivateStaticMembers.errors.txt
tests/cases/compiler/overridingPrivateStaticMembers.ts(5,7): error TS2418: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base2':
  Private property 'y' cannot be reimplemented.


==== tests/cases/compiler/overridingPrivateStaticMembers.ts (1 errors) ====
    class Base2 {
        private static y: { foo: string };
    }
     
    class Derived2 extends Base2 {
          ~~~~~~~~
!!! error TS2418: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base2':
!!! error TS2418:   Private property 'y' cannot be reimplemented.
        private static y: { foo: string; bar: string; };
    }